// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CountDownTimer /> tests snapshot test on paused state 1`] = `
<div
  className="flex flex1 justify-content-ce align-item-center"
>
  <div
    className="flex flex-col timer-container"
  >
    <div
      className="flex font-sz-65px justify-content-ce pad-1r countdown-container "
    >
      <span
        className="negativeIndicator"
      />
      03
      :
      25
      :
      45
      .
      678
    </div>
    <div
      className="flex flex1 justify-content-ce control-container"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        className="button"
        id="btnStopTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Stop"
      />
      <input
        className="button"
        id="btnResumeTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Resume"
      />
      <input
        className="button"
        disabled={true}
        id="btnLapTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Lap"
      />
    </div>
    <div
      className="flex flex-col laps-container"
    >
      <div
        className="lap-header"
      >
        Laps
      </div>
      <table>
        <thead>
          <tr>
            <th>
              Lap#
            </th>
            <th>
              Start Time
            </th>
            <th>
              End Time
            </th>
            <th>
              Elapsed Time
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;

exports[`<CountDownTimer /> tests snapshot test on paused state with laps 1`] = `
<div
  className="flex flex1 justify-content-ce align-item-center"
>
  <div
    className="flex flex-col timer-container"
  >
    <div
      className="flex font-sz-65px justify-content-ce pad-1r countdown-container "
    >
      <span
        className="negativeIndicator"
      />
      03
      :
      25
      :
      45
      .
      678
    </div>
    <div
      className="flex flex1 justify-content-ce control-container"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        className="button"
        id="btnStopTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Stop"
      />
      <input
        className="button"
        id="btnResumeTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Resume"
      />
      <input
        className="button"
        disabled={true}
        id="btnLapTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Lap"
      />
    </div>
    <div
      className="flex flex-col laps-container"
    >
      <div
        className="lap-header"
      >
        Laps
      </div>
      <table>
        <thead>
          <tr>
            <th>
              Lap#
            </th>
            <th>
              Start Time
            </th>
            <th>
              End Time
            </th>
            <th>
              Elapsed Time
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className=""
          >
            <td>
              3
            </td>
            <td>
              00:00:02.000
            </td>
            <td>
              
            </td>
            <td>
              (-)03:25:43.678
            </td>
          </tr>
          <tr
            className=""
          >
            <td>
              2
            </td>
            <td>
              00:00:03.000
            </td>
            <td>
              00:00:02.000
            </td>
            <td>
              00:00:01.000
            </td>
          </tr>
          <tr
            className=""
          >
            <td>
              1
            </td>
            <td>
              00:00:04.000
            </td>
            <td>
              00:00:03.000
            </td>
            <td>
              00:00:01.000
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<CountDownTimer /> tests snapshot test on running state 1`] = `
<div
  className="flex flex1 justify-content-ce align-item-center"
>
  <div
    className="flex flex-col timer-container"
  >
    <div
      className="flex font-sz-65px justify-content-ce pad-1r countdown-container "
    >
      <span
        className="negativeIndicator"
      />
      03
      :
      25
      :
      45
      .
      678
    </div>
    <div
      className="flex flex1 justify-content-ce control-container"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        className="button"
        id="btnStopTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Stop"
      />
      <input
        className="button"
        id="btnPauseTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Pause"
      />
      <input
        className="button"
        disabled={false}
        id="btnLapTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Lap"
      />
    </div>
    <div
      className="flex flex-col laps-container"
    >
      <div
        className="lap-header"
      >
        Laps
      </div>
      <table>
        <thead>
          <tr>
            <th>
              Lap#
            </th>
            <th>
              Start Time
            </th>
            <th>
              End Time
            </th>
            <th>
              Elapsed Time
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;

exports[`<CountDownTimer /> tests snapshot test on running state with laps 1`] = `
<div
  className="flex flex1 justify-content-ce align-item-center"
>
  <div
    className="flex flex-col timer-container"
  >
    <div
      className="flex font-sz-65px justify-content-ce pad-1r countdown-container "
    >
      <span
        className="negativeIndicator"
      />
      03
      :
      25
      :
      45
      .
      678
    </div>
    <div
      className="flex flex1 justify-content-ce control-container"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        className="button"
        id="btnStopTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Stop"
      />
      <input
        className="button"
        id="btnPauseTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Pause"
      />
      <input
        className="button"
        disabled={false}
        id="btnLapTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Lap"
      />
    </div>
    <div
      className="flex flex-col laps-container"
    >
      <div
        className="lap-header"
      >
        Laps
      </div>
      <table>
        <thead>
          <tr>
            <th>
              Lap#
            </th>
            <th>
              Start Time
            </th>
            <th>
              End Time
            </th>
            <th>
              Elapsed Time
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className=""
          >
            <td>
              3
            </td>
            <td>
              00:00:02.000
            </td>
            <td>
              
            </td>
            <td>
              (-)03:25:43.678
            </td>
          </tr>
          <tr
            className=""
          >
            <td>
              2
            </td>
            <td>
              00:00:03.000
            </td>
            <td>
              00:00:02.000
            </td>
            <td>
              00:00:01.000
            </td>
          </tr>
          <tr
            className=""
          >
            <td>
              1
            </td>
            <td>
              00:00:04.000
            </td>
            <td>
              00:00:03.000
            </td>
            <td>
              00:00:01.000
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<CountDownTimer /> tests snapshot test on stopped state 1`] = `
<div
  className="flex flex1 justify-content-ce align-item-center"
>
  <div
    className="flex flex-col timer-container"
  >
    <div
      className="flex pad-1r flex-col"
    >
      <div
        className="flex"
      >
        <div
          className="flex label align-item-center"
        >
          Set Timer
        </div>
        <div
          className="flex"
        >
          <div
            className="flex flex-col"
          >
            <label
              htmlFor="hoursDropDown"
            >
              Hours
            </label>
            <select
              className="font-sz-30px"
              id="hoursDropDown"
              onChange={[Function]}
              value="03"
            >
              <option
                value="00"
              >
                00
              </option>
              <option
                value="01"
              >
                01
              </option>
              <option
                value="02"
              >
                02
              </option>
              <option
                value="03"
              >
                03
              </option>
              <option
                value="04"
              >
                04
              </option>
              <option
                value="05"
              >
                05
              </option>
              <option
                value="06"
              >
                06
              </option>
              <option
                value="07"
              >
                07
              </option>
              <option
                value="08"
              >
                08
              </option>
              <option
                value="09"
              >
                09
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={11}
              >
                11
              </option>
              <option
                value={12}
              >
                12
              </option>
              <option
                value={13}
              >
                13
              </option>
              <option
                value={14}
              >
                14
              </option>
              <option
                value={15}
              >
                15
              </option>
              <option
                value={16}
              >
                16
              </option>
              <option
                value={17}
              >
                17
              </option>
              <option
                value={18}
              >
                18
              </option>
              <option
                value={19}
              >
                19
              </option>
              <option
                value={20}
              >
                20
              </option>
              <option
                value={21}
              >
                21
              </option>
              <option
                value={22}
              >
                22
              </option>
              <option
                value={23}
              >
                23
              </option>
            </select>
          </div>
          <div
            className="flex flex-col"
          >
            <label
              className="mar-left-05r"
              htmlFor="minutesDropDown"
            >
              Minutes
            </label>
            <select
              className="font-sz-30px mar-left-05r"
              id="minutesDropDown"
              onChange={[Function]}
              value={25}
            >
              <option
                value="00"
              >
                00
              </option>
              <option
                value="01"
              >
                01
              </option>
              <option
                value="02"
              >
                02
              </option>
              <option
                value="03"
              >
                03
              </option>
              <option
                value="04"
              >
                04
              </option>
              <option
                value="05"
              >
                05
              </option>
              <option
                value="06"
              >
                06
              </option>
              <option
                value="07"
              >
                07
              </option>
              <option
                value="08"
              >
                08
              </option>
              <option
                value="09"
              >
                09
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={11}
              >
                11
              </option>
              <option
                value={12}
              >
                12
              </option>
              <option
                value={13}
              >
                13
              </option>
              <option
                value={14}
              >
                14
              </option>
              <option
                value={15}
              >
                15
              </option>
              <option
                value={16}
              >
                16
              </option>
              <option
                value={17}
              >
                17
              </option>
              <option
                value={18}
              >
                18
              </option>
              <option
                value={19}
              >
                19
              </option>
              <option
                value={20}
              >
                20
              </option>
              <option
                value={21}
              >
                21
              </option>
              <option
                value={22}
              >
                22
              </option>
              <option
                value={23}
              >
                23
              </option>
              <option
                value={24}
              >
                24
              </option>
              <option
                value={25}
              >
                25
              </option>
              <option
                value={26}
              >
                26
              </option>
              <option
                value={27}
              >
                27
              </option>
              <option
                value={28}
              >
                28
              </option>
              <option
                value={29}
              >
                29
              </option>
              <option
                value={30}
              >
                30
              </option>
              <option
                value={31}
              >
                31
              </option>
              <option
                value={32}
              >
                32
              </option>
              <option
                value={33}
              >
                33
              </option>
              <option
                value={34}
              >
                34
              </option>
              <option
                value={35}
              >
                35
              </option>
              <option
                value={36}
              >
                36
              </option>
              <option
                value={37}
              >
                37
              </option>
              <option
                value={38}
              >
                38
              </option>
              <option
                value={39}
              >
                39
              </option>
              <option
                value={40}
              >
                40
              </option>
              <option
                value={41}
              >
                41
              </option>
              <option
                value={42}
              >
                42
              </option>
              <option
                value={43}
              >
                43
              </option>
              <option
                value={44}
              >
                44
              </option>
              <option
                value={45}
              >
                45
              </option>
              <option
                value={46}
              >
                46
              </option>
              <option
                value={47}
              >
                47
              </option>
              <option
                value={48}
              >
                48
              </option>
              <option
                value={49}
              >
                49
              </option>
              <option
                value={50}
              >
                50
              </option>
              <option
                value={51}
              >
                51
              </option>
              <option
                value={52}
              >
                52
              </option>
              <option
                value={53}
              >
                53
              </option>
              <option
                value={54}
              >
                54
              </option>
              <option
                value={55}
              >
                55
              </option>
              <option
                value={56}
              >
                56
              </option>
              <option
                value={57}
              >
                57
              </option>
              <option
                value={58}
              >
                58
              </option>
              <option
                value={59}
              >
                59
              </option>
            </select>
          </div>
          <div
            className="flex flex-col"
          >
            <label
              className="mar-left-05r"
              htmlFor="secondsDropDown"
            >
              Seconds
            </label>
            <select
              className="font-sz-30px mar-left-05r"
              id="secondsDropDown"
              onChange={[Function]}
              value={45}
            >
              <option
                value="00"
              >
                00
              </option>
              <option
                value="01"
              >
                01
              </option>
              <option
                value="02"
              >
                02
              </option>
              <option
                value="03"
              >
                03
              </option>
              <option
                value="04"
              >
                04
              </option>
              <option
                value="05"
              >
                05
              </option>
              <option
                value="06"
              >
                06
              </option>
              <option
                value="07"
              >
                07
              </option>
              <option
                value="08"
              >
                08
              </option>
              <option
                value="09"
              >
                09
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={11}
              >
                11
              </option>
              <option
                value={12}
              >
                12
              </option>
              <option
                value={13}
              >
                13
              </option>
              <option
                value={14}
              >
                14
              </option>
              <option
                value={15}
              >
                15
              </option>
              <option
                value={16}
              >
                16
              </option>
              <option
                value={17}
              >
                17
              </option>
              <option
                value={18}
              >
                18
              </option>
              <option
                value={19}
              >
                19
              </option>
              <option
                value={20}
              >
                20
              </option>
              <option
                value={21}
              >
                21
              </option>
              <option
                value={22}
              >
                22
              </option>
              <option
                value={23}
              >
                23
              </option>
              <option
                value={24}
              >
                24
              </option>
              <option
                value={25}
              >
                25
              </option>
              <option
                value={26}
              >
                26
              </option>
              <option
                value={27}
              >
                27
              </option>
              <option
                value={28}
              >
                28
              </option>
              <option
                value={29}
              >
                29
              </option>
              <option
                value={30}
              >
                30
              </option>
              <option
                value={31}
              >
                31
              </option>
              <option
                value={32}
              >
                32
              </option>
              <option
                value={33}
              >
                33
              </option>
              <option
                value={34}
              >
                34
              </option>
              <option
                value={35}
              >
                35
              </option>
              <option
                value={36}
              >
                36
              </option>
              <option
                value={37}
              >
                37
              </option>
              <option
                value={38}
              >
                38
              </option>
              <option
                value={39}
              >
                39
              </option>
              <option
                value={40}
              >
                40
              </option>
              <option
                value={41}
              >
                41
              </option>
              <option
                value={42}
              >
                42
              </option>
              <option
                value={43}
              >
                43
              </option>
              <option
                value={44}
              >
                44
              </option>
              <option
                value={45}
              >
                45
              </option>
              <option
                value={46}
              >
                46
              </option>
              <option
                value={47}
              >
                47
              </option>
              <option
                value={48}
              >
                48
              </option>
              <option
                value={49}
              >
                49
              </option>
              <option
                value={50}
              >
                50
              </option>
              <option
                value={51}
              >
                51
              </option>
              <option
                value={52}
              >
                52
              </option>
              <option
                value={53}
              >
                53
              </option>
              <option
                value={54}
              >
                54
              </option>
              <option
                value={55}
              >
                55
              </option>
              <option
                value={56}
              >
                56
              </option>
              <option
                value={57}
              >
                57
              </option>
              <option
                value={58}
              >
                58
              </option>
              <option
                value={59}
              >
                59
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="flex mar-top-05r"
      >
        <div
          className="flex label align-item-center flex-wrap-wrap"
        >
          Set Threshold (in seconds)
        </div>
        <div
          className="flex"
        >
          <input
            className="input-text"
            onChange={[Function]}
            type="text"
            value={5}
          />
        </div>
      </div>
    </div>
    <div
      className="flex flex1 justify-content-ce control-container"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        className="button"
        disabled={false}
        id="btnStartTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Start"
      />
    </div>
    <div
      className="flex flex-col laps-container"
    >
      <div
        className="lap-header"
      >
        Laps
      </div>
      <table>
        <thead>
          <tr>
            <th>
              Lap#
            </th>
            <th>
              Start Time
            </th>
            <th>
              End Time
            </th>
            <th>
              Elapsed Time
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;

exports[`<CountDownTimer /> tests snapshot test on stopped state with laps 1`] = `
<div
  className="flex flex1 justify-content-ce align-item-center"
>
  <div
    className="flex flex-col timer-container"
  >
    <div
      className="flex pad-1r flex-col"
    >
      <div
        className="flex"
      >
        <div
          className="flex label align-item-center"
        >
          Set Timer
        </div>
        <div
          className="flex"
        >
          <div
            className="flex flex-col"
          >
            <label
              htmlFor="hoursDropDown"
            >
              Hours
            </label>
            <select
              className="font-sz-30px"
              id="hoursDropDown"
              onChange={[Function]}
              value="03"
            >
              <option
                value="00"
              >
                00
              </option>
              <option
                value="01"
              >
                01
              </option>
              <option
                value="02"
              >
                02
              </option>
              <option
                value="03"
              >
                03
              </option>
              <option
                value="04"
              >
                04
              </option>
              <option
                value="05"
              >
                05
              </option>
              <option
                value="06"
              >
                06
              </option>
              <option
                value="07"
              >
                07
              </option>
              <option
                value="08"
              >
                08
              </option>
              <option
                value="09"
              >
                09
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={11}
              >
                11
              </option>
              <option
                value={12}
              >
                12
              </option>
              <option
                value={13}
              >
                13
              </option>
              <option
                value={14}
              >
                14
              </option>
              <option
                value={15}
              >
                15
              </option>
              <option
                value={16}
              >
                16
              </option>
              <option
                value={17}
              >
                17
              </option>
              <option
                value={18}
              >
                18
              </option>
              <option
                value={19}
              >
                19
              </option>
              <option
                value={20}
              >
                20
              </option>
              <option
                value={21}
              >
                21
              </option>
              <option
                value={22}
              >
                22
              </option>
              <option
                value={23}
              >
                23
              </option>
            </select>
          </div>
          <div
            className="flex flex-col"
          >
            <label
              className="mar-left-05r"
              htmlFor="minutesDropDown"
            >
              Minutes
            </label>
            <select
              className="font-sz-30px mar-left-05r"
              id="minutesDropDown"
              onChange={[Function]}
              value={25}
            >
              <option
                value="00"
              >
                00
              </option>
              <option
                value="01"
              >
                01
              </option>
              <option
                value="02"
              >
                02
              </option>
              <option
                value="03"
              >
                03
              </option>
              <option
                value="04"
              >
                04
              </option>
              <option
                value="05"
              >
                05
              </option>
              <option
                value="06"
              >
                06
              </option>
              <option
                value="07"
              >
                07
              </option>
              <option
                value="08"
              >
                08
              </option>
              <option
                value="09"
              >
                09
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={11}
              >
                11
              </option>
              <option
                value={12}
              >
                12
              </option>
              <option
                value={13}
              >
                13
              </option>
              <option
                value={14}
              >
                14
              </option>
              <option
                value={15}
              >
                15
              </option>
              <option
                value={16}
              >
                16
              </option>
              <option
                value={17}
              >
                17
              </option>
              <option
                value={18}
              >
                18
              </option>
              <option
                value={19}
              >
                19
              </option>
              <option
                value={20}
              >
                20
              </option>
              <option
                value={21}
              >
                21
              </option>
              <option
                value={22}
              >
                22
              </option>
              <option
                value={23}
              >
                23
              </option>
              <option
                value={24}
              >
                24
              </option>
              <option
                value={25}
              >
                25
              </option>
              <option
                value={26}
              >
                26
              </option>
              <option
                value={27}
              >
                27
              </option>
              <option
                value={28}
              >
                28
              </option>
              <option
                value={29}
              >
                29
              </option>
              <option
                value={30}
              >
                30
              </option>
              <option
                value={31}
              >
                31
              </option>
              <option
                value={32}
              >
                32
              </option>
              <option
                value={33}
              >
                33
              </option>
              <option
                value={34}
              >
                34
              </option>
              <option
                value={35}
              >
                35
              </option>
              <option
                value={36}
              >
                36
              </option>
              <option
                value={37}
              >
                37
              </option>
              <option
                value={38}
              >
                38
              </option>
              <option
                value={39}
              >
                39
              </option>
              <option
                value={40}
              >
                40
              </option>
              <option
                value={41}
              >
                41
              </option>
              <option
                value={42}
              >
                42
              </option>
              <option
                value={43}
              >
                43
              </option>
              <option
                value={44}
              >
                44
              </option>
              <option
                value={45}
              >
                45
              </option>
              <option
                value={46}
              >
                46
              </option>
              <option
                value={47}
              >
                47
              </option>
              <option
                value={48}
              >
                48
              </option>
              <option
                value={49}
              >
                49
              </option>
              <option
                value={50}
              >
                50
              </option>
              <option
                value={51}
              >
                51
              </option>
              <option
                value={52}
              >
                52
              </option>
              <option
                value={53}
              >
                53
              </option>
              <option
                value={54}
              >
                54
              </option>
              <option
                value={55}
              >
                55
              </option>
              <option
                value={56}
              >
                56
              </option>
              <option
                value={57}
              >
                57
              </option>
              <option
                value={58}
              >
                58
              </option>
              <option
                value={59}
              >
                59
              </option>
            </select>
          </div>
          <div
            className="flex flex-col"
          >
            <label
              className="mar-left-05r"
              htmlFor="secondsDropDown"
            >
              Seconds
            </label>
            <select
              className="font-sz-30px mar-left-05r"
              id="secondsDropDown"
              onChange={[Function]}
              value={45}
            >
              <option
                value="00"
              >
                00
              </option>
              <option
                value="01"
              >
                01
              </option>
              <option
                value="02"
              >
                02
              </option>
              <option
                value="03"
              >
                03
              </option>
              <option
                value="04"
              >
                04
              </option>
              <option
                value="05"
              >
                05
              </option>
              <option
                value="06"
              >
                06
              </option>
              <option
                value="07"
              >
                07
              </option>
              <option
                value="08"
              >
                08
              </option>
              <option
                value="09"
              >
                09
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={11}
              >
                11
              </option>
              <option
                value={12}
              >
                12
              </option>
              <option
                value={13}
              >
                13
              </option>
              <option
                value={14}
              >
                14
              </option>
              <option
                value={15}
              >
                15
              </option>
              <option
                value={16}
              >
                16
              </option>
              <option
                value={17}
              >
                17
              </option>
              <option
                value={18}
              >
                18
              </option>
              <option
                value={19}
              >
                19
              </option>
              <option
                value={20}
              >
                20
              </option>
              <option
                value={21}
              >
                21
              </option>
              <option
                value={22}
              >
                22
              </option>
              <option
                value={23}
              >
                23
              </option>
              <option
                value={24}
              >
                24
              </option>
              <option
                value={25}
              >
                25
              </option>
              <option
                value={26}
              >
                26
              </option>
              <option
                value={27}
              >
                27
              </option>
              <option
                value={28}
              >
                28
              </option>
              <option
                value={29}
              >
                29
              </option>
              <option
                value={30}
              >
                30
              </option>
              <option
                value={31}
              >
                31
              </option>
              <option
                value={32}
              >
                32
              </option>
              <option
                value={33}
              >
                33
              </option>
              <option
                value={34}
              >
                34
              </option>
              <option
                value={35}
              >
                35
              </option>
              <option
                value={36}
              >
                36
              </option>
              <option
                value={37}
              >
                37
              </option>
              <option
                value={38}
              >
                38
              </option>
              <option
                value={39}
              >
                39
              </option>
              <option
                value={40}
              >
                40
              </option>
              <option
                value={41}
              >
                41
              </option>
              <option
                value={42}
              >
                42
              </option>
              <option
                value={43}
              >
                43
              </option>
              <option
                value={44}
              >
                44
              </option>
              <option
                value={45}
              >
                45
              </option>
              <option
                value={46}
              >
                46
              </option>
              <option
                value={47}
              >
                47
              </option>
              <option
                value={48}
              >
                48
              </option>
              <option
                value={49}
              >
                49
              </option>
              <option
                value={50}
              >
                50
              </option>
              <option
                value={51}
              >
                51
              </option>
              <option
                value={52}
              >
                52
              </option>
              <option
                value={53}
              >
                53
              </option>
              <option
                value={54}
              >
                54
              </option>
              <option
                value={55}
              >
                55
              </option>
              <option
                value={56}
              >
                56
              </option>
              <option
                value={57}
              >
                57
              </option>
              <option
                value={58}
              >
                58
              </option>
              <option
                value={59}
              >
                59
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="flex mar-top-05r"
      >
        <div
          className="flex label align-item-center flex-wrap-wrap"
        >
          Set Threshold (in seconds)
        </div>
        <div
          className="flex"
        >
          <input
            className="input-text"
            onChange={[Function]}
            type="text"
            value={5}
          />
        </div>
      </div>
    </div>
    <div
      className="flex flex1 justify-content-ce control-container"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        className="button"
        disabled={false}
        id="btnStartTimer"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
        value="Start"
      />
    </div>
    <div
      className="flex flex-col laps-container"
    >
      <div
        className="lap-header"
      >
        Laps
      </div>
      <table>
        <thead>
          <tr>
            <th>
              Lap#
            </th>
            <th>
              Start Time
            </th>
            <th>
              End Time
            </th>
            <th>
              Elapsed Time
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className=""
          >
            <td>
              1
            </td>
            <td>
              00:00:04.000
            </td>
            <td>
              00:00:03.000
            </td>
            <td>
              00:00:01.000
            </td>
          </tr>
          <tr
            className=""
          >
            <td>
              2
            </td>
            <td>
              00:00:03.000
            </td>
            <td>
              00:00:02.000
            </td>
            <td>
              00:00:01.000
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
